Disable spurious MSVC warning C4273 in Qt Gui, Qt OpenGL

For optimized/release builds, cl 19.28 produces some false positive
"potential divide by 0" warnings even for code where no valid code path
can lead to such a division.

Fixes: QTBUG-92940
Change-Id: I461f9104d7b9dc2d74839bf30bebb2b9d4cf2db3
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit 16a1ba69a682fbe7855682448ac0340574a67035)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>